# GeneralPurposeChatBot

./: .dockerignore  .env  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  README.md  README.ru.md  admin.py  coverage.xml  database.py  docker-compose-prod.yml  docker-compose-swarm-prod.yml  docker-compose.yml  handler.py  help  main.py  pyproject.toml  requirements.experiment.txt  requirements.prod.txt  requirements.txt  requirments.txt  setup.cfg  setup.py  setup_plugin.sh  user.py
.github/workflows/: docker-publish.yml  ruff.yml
.ipynb_checkpoints/: main-checkpoint.py
additional/nginx/: nginx.conf
additional/scripts/: convert_file_to_md.sh
create_bot_on_laptop/: Нефтезнайка0.2_чатбот (1).py
create_bot_on_laptop/csv_files_for_bot/: logs_all_bot.csv  requests_bot.csv
create_bot_on_yandexcloud/: index.py  instruction_yandexcloud.txt  main.py
data_examples/: dataframe_bot.csv  request_logs_bot.csv
experiments/: ChromaNew.ipynb  ExperimentYandexGPT2API.ipynb  LangChain.ipynb  TracingLangChain.ipynb  data.json  promt.json
experiments/langchain_tests/: LangChain.ipynb  LangChainLowCodeExperiment.ipynb
experiments/langfuse_experiments/: LowCodeAgent.ipynb  PromptViaLanfuse.ipynb  TracingLangChain.ipynb  Untitled.ipynb
experiments/profkom_agents/: ProfkomLogic.ipynb
experiments/scripts/: convert_doc_to_docx.sh  convert_file_to_md.sh  load_data_to_chroma.py  load_data_to_chroma.sh
experiments/yandex_api/: ExperimentYandexGPT2API.ipynb  LangChainAndYandexGPT.ipynb
info/: example_curl.txt  promt.json
legacy_code/: TelegramBotLaptop_oneflow.py  index.py
mlops/docker/: Dockerfile  docker-compose-prod.yml  docker-compose.yml
mlops/scripts/: load_data_to_chroma.py
nginx/: nginx.conf
nginx/blocked_ips/: blocked_conf
nginx/conf.d/: app.conf
nginx/scripts/: block_ip.sh  entrypoint.sh  process_banned_ips.sh
nginx/ssl/: self-signed.crt  self-signed.key
nginx/tokens/: valid_tokens.map
parsing/: Парсим сайт единой информационной системы закупок.py
prompts/: WorkerUnionDefault.txt  answer_part.txt  assistant_prompt.txt  collect_final_answer.txt  decompose_question.txt  default_prompt.txt  determine_collection.txt  filter_prompt.txt  summary_results.txt  validate_final_answer.txt  validate_text.txt  validation_prompt.txt
scripts/: prepare-secrets.sh  run-integration-tests.sh  sync-chroma-from-yadisk.sh  upload_prompts_to_langfuse.py
src/agents/: __init__.py
tests/: conftest.py
utils/: ChatHistoryManager.py  RedisAdapters.py  RerankerAPI.py  SessionAdapter.py  UserDefaultFunctions.py  YandexAPI.py
(+144 files in other folders)
