[project]
name = "UnionChatBot"
version = "0.3.0-alpha"
description = "LangChain based Agent to please them all!"
readme = "README.md"
requires-python = "==3.12.*"
license = {text = "MIT License"}
authors = [{name = "Aleksandr Samofalov", email = "SamofalovWORK@yandex.ru"}]
classifiers = [
    "Development Status :: Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
keywords = ["YandexGPT API", "LLM", "RAG", "LangChain"]
dependencies = [
    "scikit-learn>=1.8.0",
    "fastapi~=0.121.2",
    "langchain~=0.3.27",
    "langgraph",
    "pydantic==2.12.4",
    "redis~=7.0.1",
    "jupyter~=1.1.1",
    "ipython~=8.37.0",
    "langchain_openai",
    "dotenv==0.9.9",
    "langchain-redis",
    "langchain-community",
    "yandexcloud==0.373.0",
    "langfuse~=2.60.10",
    "fsspec==2025.5.1",
    "watchfiles==1.1.0",
    "pandas",
    "numpy",
    "chromadb~=1.0.20",
    "rank-bm25~=0.2.2",
    "pandas-stubs~=3.0.0",
]

[project.urls]
Homepage = "https://github.com/GishB/GeneralPurposeTelegramBOT"
"Bug Reports" = "https://github.com/GishB/GeneralPurposeTelegramBOT/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agents*", "modules*", "service*"]
exclude = ["tests*", "experiments*", "docs*", ".*", "*.egg-info", "build*", "dist*"]

[dependency-groups]

dev = [
    "ruff",
    "pylint",
    "pre-commit",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache",
    ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype",
    ".ruff_cache", ".svn", ".tox", ".venv", ".vscode",
    "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "site-packages", "venv",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "C4",
    "W"
]
ignore = [
    "E501",
    "B008",
    "B904",
    "B905",
    "C416"
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["UnionChatBot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pylint.main]
fail-under = 9
py-version = "3.12"

[tool.pylint.messages_control]
disable = [
  "C0114",
  "C0115",
  "C0116",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.similarities]
min-similarity-lines = 8
